objects/PJ_ByFor_Client__c.object
<CustomObject>
    <fields>
        <fullName>PJ_ByFor_City_of_residence__c</fullName>
        <label>City of Residence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Client_Date_of_birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Context_of_the_first_contact__c</fullName>
        <label>Context of the First Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Convertion_to_Friend_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Convertion To Friend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Country_residence__c</fullName>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PJ_ByFor_Country_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Disabilities__c</fullName>
        <label>Disabilities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_First_Contact_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>First Contact Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_First_name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Image_Right__c</fullName>
        <formula>&quot;CHAMPAGNE PERRIER-JOUET SA informs you that a computerized personal data processing will be conducted with the data obtained for the purpose of providing information to the persons contacting PERRIER-JOUET.&quot; &amp; BR()&amp; &quot;The recipient of the data are the Communication Department and the Marketing Department of PERRIER-JOUET.&quot; &amp; BR()&amp;&quot;Pursuant to the Act of 6 January 1978 on information technology, data files and civil liberties amended on 2004, you are granted with a right of access and rectification of any data relating to you, that you can exercise directly by sending an email to contact@perrier-jouet.com. &quot; &amp; BR() &amp; &quot;You are also entitled, on legitimate grounds, to object to the processing of any data relating to you.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Right</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact [Prospect Owner]</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Latest_Situation_Update_Date__c</fullName>
        <label>Latest Situation Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Latest_Situation_Update__c</fullName>
        <label>Latest Situation Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Will not be available</fullName>
                </value>
                <value>
                    <fullName>Too complicated</fullName>
                </value>
                <value>
                    <fullName>Takes too long</fullName>
                </value>
                <value>
                    <fullName>Not interested as for now</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Algerian</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Andorran</fullName>
                </value>
                <value>
                    <fullName>Angolan</fullName>
                </value>
                <value>
                    <fullName>Antiguans</fullName>
                </value>
                <value>
                    <fullName>Argentinean</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahamian</fullName>
                </value>
                <value>
                    <fullName>Bahraini</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Barbadian</fullName>
                </value>
                <value>
                    <fullName>Barbudans</fullName>
                </value>
                <value>
                    <fullName>Batswana</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Belgian</fullName>
                </value>
                <value>
                    <fullName>Belizean</fullName>
                </value>
                <value>
                    <fullName>Beninese</fullName>
                </value>
                <value>
                    <fullName>Bhutanese</fullName>
                </value>
                <value>
                    <fullName>Bolivian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>British</fullName>
                </value>
                <value>
                    <fullName>Bruneian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burkinabe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Phone_del__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                    <default>true</default>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Subsidiary__c</fullName>
        <formula>Owner:User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Tech_Owner_Company__c</fullName>
        <label>Tech Owner Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Tech_Receive_offer_PJ__c</fullName>
        <formula>IF(
PJ_ByFor_receive_offers_PJ__c,
&quot;Yes&quot;,
&quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Receive offer PJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_Tech_Receive_offer_PRG__c</fullName>
        <formula>IF( 
PJ_ByFor_receive_offers_and_news_PRG__c, 
&quot;Yes&quot;, 
&quot;No&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Receive offer PRG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_receive_offers_PJ__c</fullName>
        <defaultValue>true</defaultValue>
        <label>To Receive Offers and News From PJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJ_ByFor_receive_offers_and_news_PRG__c</fullName>
        <defaultValue>true</defaultValue>
        <label>To Receive Offers and News From PRG</label>
        <type>Checkbox</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PJ_ByFor_First_name__c</columns>
        <columns>PJ_ByFor_Status__c</columns>
        <columns>PJ_ByFor_Phone_del__c</columns>
        <columns>PJ_ByFor_Key_Contact__c</columns>
        <columns>PJ_ByFor_First_Contact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Surname [Last Name]</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <recordTypes>
        <fullName>PJ_ByFor_Friend</fullName>
        <active>true</active>
        <label>Friend</label>
    </recordTypes>
    <recordTypes>
        <fullName>PJ_ByFor_Prospect</fullName>
        <active>true</active>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PJ_ByFor_PhoneForm</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
	NOT(ISBLANK(PJ_ByFor_Phone_del__c)),
	OR(
		CONTAINS( PJ_ByFor_Phone_del__c , &quot; &quot;),
		AND(
			LEFT(PJ_ByFor_Phone_del__c,1) = &apos;+&apos;,
			NOT(ISNUMBER(RIGHT(PJ_ByFor_Phone_del__c,LEN(PJ_ByFor_Phone_del__c) - 1)))
		),	
		NOT(LEFT(PJ_ByFor_Phone_del__c,1) = &apos;+&apos;)
	)
)</errorConditionFormula>
        <errorDisplayField>PJ_ByFor_Phone_del__c</errorDisplayField>
        <errorMessage>PhoneNumber must start with + and not contains spaces.</errorMessage>
    </validationRules>
</CustomObject>